hydroflow/tests/compile-fail/surface_singleton_nostate_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/surface_singleton_nostate_undefined.rs:5:77
  |
5 |             -> filter(|value| value <= #my_ref.as_reveal_ref() && value <= #unknown.as_reveal_ref())
  |                                                                             ^^^^^^^
